--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "gatsby-starter-theme-prettier-eslint",
   "description": "Gatsby starter theme with Prettier & Eslint configurations.",
-  "version": "2.0.0",
+  "version": "1.0.0",
   "author": "Shane Biggs",
   "dependencies": {
+    "@mdx-js/mdx": "^0.20.3",
+    "@mdx-js/tag": "^0.20.3",
     "gatsby": "^2.1.20",
     "gatsby-image": "^2.0.31",
+    "gatsby-mdx": "^0.4.2",
     "gatsby-plugin-manifest": "^2.0.21",
     "gatsby-plugin-offline": "^2.0.24",
     "gatsby-plugin-react-helmet": "^3.0.7",
