--- a/package.json
+++ b/package.json
@@ -1,29 +1,38 @@
 {
   "name": "gatsby-starter-theme-prettier-eslint",
-  "description": "Gatsby starter theme with Prettier & Eslint configurations.",
+  "description": "Gatsby MDX starter theme with Prettier & Eslint configurations.",
   "version": "1.0.0",
   "author": "Shane Biggs",
   "dependencies": {
     "@mdx-js/mdx": "^0.20.3",
     "@mdx-js/tag": "^0.20.3",
-    "gatsby": "^2.1.20",
-    "gatsby-image": "^2.0.31",
-    "gatsby-mdx": "^0.4.2",
-    "gatsby-plugin-manifest": "^2.0.21",
-    "gatsby-plugin-offline": "^2.0.24",
-    "gatsby-plugin-react-helmet": "^3.0.7",
-    "gatsby-plugin-sass": "^2.0.10",
-    "gatsby-plugin-sharp": "^2.0.24",
+    "gatsby": "^2.3.3",
+    "gatsby-image": "^2.0.35",
+    "gatsby-mdx": "^0.4.4",
+    "gatsby-plugin-lodash": "^3.0.5",
+    "gatsby-plugin-manifest": "^2.0.25",
+    "gatsby-plugin-offline": "^2.0.25",
+    "gatsby-plugin-react-helmet": "^3.0.11",
+    "gatsby-plugin-sharp": "^2.0.32",
+    "gatsby-plugin-typography": "^2.2.10",
+    "gatsby-remark-copy-linked-files": "^2.0.11",
+    "gatsby-remark-images": "^3.0.10",
+    "gatsby-remark-responsive-iframe": "^2.1.1",
+    "gatsby-remark-smartypants": "^2.0.9",
+    "gatsby-source-filesystem": "^2.0.28",
+    "gatsby-transformer-remark": "^2.3.8",
+    "gatsby-transformer-sharp": "^2.1.17",
     "gatsby-plugin-styled-components": "^3.0.6",
-    "gatsby-source-filesystem": "^2.0.26",
-    "gatsby-transformer-remark": "^2.3.4",
-    "gatsby-transformer-sharp": "^2.1.15",
-    "node-sass": "^4.11.0",
+    "lodash": "^4.17.11",
+    "mdx-utils": "0.0.2",
+    "prism-react-renderer": "^0.1.6",
     "prop-types": "^15.7.2",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
     "react-helmet": "^5.2.0",
-    "styled-components": "^4.1.1"
+    "react-live": "^1.12.0",
+    "styled-components": "^4.2.0",
+    "typography": "^0.16.19"
   },
   "keywords": [
     "gatsby"
@@ -34,12 +43,13 @@
     "watch-config": "gatsby develop && watch-run -p gatsby-config.js 'kill-port --port 8000 && gatsby develop'",
     "dev": "gatsby develop",
     "format": "prettier --write '**/*.js'",
+    "serve": "gatsby serve",
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf public && rm -rf .cache"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.10.0",
-    "eslint": "^5.15.0",
+    "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-loader": "^2.1.2",
