--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.11",
     "gatsby-plugin-sharp": "^2.0.32",
+    "gatsby-plugin-styled-components": "^3.0.6",
     "gatsby-plugin-typography": "^2.2.10",
     "gatsby-remark-copy-linked-files": "^2.0.11",
     "gatsby-remark-images": "^3.0.10",
@@ -22,7 +23,6 @@
     "gatsby-source-filesystem": "^2.0.28",
     "gatsby-transformer-remark": "^2.3.8",
     "gatsby-transformer-sharp": "^2.1.17",
-    "gatsby-plugin-styled-components": "^3.0.6",
     "lodash": "^4.17.11",
     "mdx-utils": "0.0.2",
     "prism-react-renderer": "^0.1.6",
@@ -31,6 +31,7 @@
     "react-dom": "^16.8.5",
     "react-helmet": "^5.2.0",
     "react-live": "^1.12.0",
+    "react-typography": "^0.16.19",
     "styled-components": "^4.2.0",
     "typography": "^0.16.19"
   },
